Switch Docker to TYPE=CUSTOM and add build_server.sh for full mod-bundled artifacts